[package]
name = "ds9"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
data-encoding = "2.8.0"
iroh = "0.32.1"
iroh-blobs = { version = "0.32.0", features = ["rpc"] }
iroh-gossip = "0.32.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = "1.43.0"
